# VIZO

./: .gitignore  README.md  build-all.bat  build-all.sh  electron-main.js  package.json  preload.js
backend/: main.py  pyproject.toml
backend/services/: hbnum.py  rg.py  rmsd.py  rmsf.py  sasa.py
backend/src/api/: dependencies.py
backend/src/md_analysis/application/: analysis_worker.py
backend/src/md_analysis/domain/: plotter.py
backend/src/md_analysis/infrastructure/: xvg_parser.py
backend/src/md_analysis/infrastructure/persistence/: local_storage.py
backend/src/md_analysis/infrastructure/plotting/: engine.py  metrics.py  theme.py
frontend/: index.html  package.json
frontend/src/: App.vue  style.css
frontend/src/features/analysis/api/: analysis.ts
frontend/src/features/analysis/components/: AnalysisControls.vue
frontend/src/features/analysis/composables/: useAnalysis.ts
frontend/src/features/file-upload/components/: XvgDropzone.vue
frontend/src/features/history/api/: history.ts
frontend/src/features/history/components/: JobHistory.vue  StatusPill.vue
frontend/src/features/history/composables/: useHistory.ts
frontend/src/features/pdf-viewer/components/: PdfPreview.vue
frontend/src/shared/components/: AppHeader.vue  BaseSpinner.vue
